Way behind on commits. Fixed styling, and added a register component.

--- a/client/brogblog/src/Resources/css/styles.css
+++ b/client/brogblog/src/Resources/css/styles.css
@@ -12,6 +12,52 @@ body {
     width: 1100px;
     margin: 0 auto;
 }
+.footerBackgroundColor {
+    background-color: rgba(36, 36, 33, .9);
+}
+
+footer .logo {
+    text-align: center;
+    font-family: 'oswald', sans-serif;
+    ;
+    color: #f8333c;
+    font-size: 40px;
+    padding: 11px 0px;
+    border-bottom: 1px solid #4d4d4d;
+}
+
+footer .wrapper {
+    display: flex;
+    color: #f8333c;
+}
+
+footer .left,
+footer .right {
+    flex: 1;
+}
+
+footer .business_nfo {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer .business_nfo .tag {
+    flex-grow: 1;
+    position: relative;
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+footer .business_nfo .icon {
+    position: absolute;
+    font-size: 26px;
+    top: 10px;
+}
+
+footer .business_nfo .nfo {
+    padding-left: 40px;
+}
+
 }
 
 .page_container {
@@ -202,5 +248,70 @@ input {
     padding: 10px 10px;
     width: 100%;
     margin: 10px 0px 0px 0px;
+}
+
+.error_label {
+    color: #F44336;
+    display: block;
+    font-size: 15px;
+}
+
+textarea {
+    width: 100%;
+    height: 51px;
+    font-size: 15px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-top: 5px;
+    border: 1px solid #d1d1d1;
+}
+
+.form_devider {
+    border-bottom: 3px solid #999592;
+    margin: 40px 0px;
+}
+
+.label_inputs {
+    display: inline-block;
+    background: #999592;
+    color: #fff;
+    padding: 5px 5px;
+}
+
+select {
+    font-size: 16px;
+    height: 38px;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+    width: 100%;
+    margin: 10px 0px 0px 0px;
+}
+
+.formBlock {
+    margin-bottom: 10px;
+}
+
+.form_block_two {
+    display: flex;
+}
+
+.form_block_two .block {
+    flex-grow: 1;
+    box-sizing: border-box;
+}
+
+.form_block_two .block:nth-child(1) {
+    padding-right: 10px;
+}
+
+.form_block_two .block:nth-child(2) {
+    padding-left: 10px;
+}
+
+.form_success {
+    background: #4CAF50;
+    color: #ffffffff;
+    padding: 10px;
+    display: block;
 }
 
